package com.mef.parkauto.entity;

/**
 * Statuts d'une affectation de véhicule.
 */
public enum StatutAffectation {
    EN_COURS,
    RESTITUEE,
    ANNULEE
}
