package com.mef.parkauto.entity;

/**
 * Statuts possibles pour un profil conducteur / chauffeur.
 */
public enum StatutConducteur {
    ACTIF,
    SUSPENDU,
    INACTIF
}
