@startuml
!include _theme.puml
title Diagramme de classes - Conducteurs et affectations
hide circle
skinparam classAttributeIconSize 0

class Conducteur <<Entity>> {
  - matricule: String
  - nom: String
  - prenom: String
  - cin: String
  - numeroPermis: String
  - categoriePermis: String
  - dateExpirationPermis: LocalDate
  - statut: StatutConducteur
}

class DemandeDeplacement <<Entity>> {
  - reference: String
  - motif: String
  - destination: String
  - dateHeureDepart: LocalDateTime
  - dateHeureRetourEstimee: LocalDateTime
  - nombrePassagers: int
  - statut: StatutDemande
}

class Affectation <<Entity>> {
  - reference: String
  - dateDebut: LocalDateTime
  - dateFinPrevisionnelle: LocalDateTime
  - dateFinReelle: LocalDateTime
  - kilometrageDepart: Long
  - kilometrageRetour: Long
  - statut: StatutAffectation
}

class Utilisateur <<Entity>> {
  - matricule: String
}

class Vehicule <<Entity>> {
  - immatriculation: String
}

enum StatutDemande {
  EN_ATTENTE_VALIDATION
  VALIDEE_SERVICE
  REJETEE
  APPROUVEE_AFFECTEE
  EN_COURS
  TERMINEE
}

enum StatutAffectation {
  EN_COURS
  RESTITUEE
}

enum StatutConducteur {
  ACTIF
  SUSPENDU
}

DemandeDeplacement "0..*" --> "1" Utilisateur : demandeur
Affectation "1" --> "1" DemandeDeplacement
Affectation "0..*" --> "1" Vehicule
Affectation "0..*" --> "1" Conducteur
DemandeDeplacement --> StatutDemande
Affectation --> StatutAffectation
Conducteur --> StatutConducteur

note bottom of Affectation
  L'Ordre de Mission est un document PDF genere
  a partir de l'Affectation
  (GET /api/ordres-de-mission/{id}/pdf).
  Ce n'est pas une entite persistee.
end note
@enduml
